--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -85,7 +85,7 @@
       <div class="col-lg-6 col-md-12 ">
         <div class="wrapper">
         <div class="w-iframe">
-          <iframe class="video" height='465px' width='470px' src="https://www.youtube.com/embed/gNz-TZIuNwo" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video" height='465px' width='470px' src="https://youtube.com/@jaimevargas-t5q?si=6z5l8sUvBMIytxfF" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
       </div>
